# Copyright (c) 2021-2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")
import("../../../../var.gni")

module_output_path = "safwk/safwk"

config("system_ability_config") {
  visibility = [ ":*" ]
  include_dirs = [
    "//foundation/systemabilitymgr/safwk/services/safwk/include",
    "//foundation/systemabilitymgr/safwk/interfaces/innerkits/safwk",
  ]
}

config("system_ability_all_deps_config") {
  include_dirs =
      [ "//foundation/systemabilitymgr/safwk/interfaces/innerkits/safwk" ]
}

ohos_static_library("system_ability_fwk_tdd") {
  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
    cfi_no_nvcall = true
    blocklist = "../../../../cfi_blocklist.txt"
  }
  sources = [
    "//foundation/systemabilitymgr/safwk/services/safwk/src/api_cache_manager.cpp",
    "//foundation/systemabilitymgr/safwk/services/safwk/src/ffrt_handler.cpp",
    "//foundation/systemabilitymgr/safwk/services/safwk/src/local_ability_manager.cpp",
    "//foundation/systemabilitymgr/safwk/services/safwk/src/local_ability_manager_dumper.cpp",
    "//foundation/systemabilitymgr/safwk/services/safwk/src/local_ability_manager_stub.cpp",
    "//foundation/systemabilitymgr/safwk/services/safwk/src/system_ability.cpp",
    "//foundation/systemabilitymgr/safwk/services/safwk/src/system_ability_ondemand_reason.cpp",
  ]

  configs =
      [ "//foundation/systemabilitymgr/safwk/test/resource:coverage_flags" ]

  public_configs = [
    ":system_ability_config",
    ":system_ability_all_deps_config",
  ]
  if (is_standard_system) {
    external_deps = [
      "access_token:libaccesstoken_sdk",
      "c_utils:utils",
      "ffrt:libffrt",
      "hilog:libhilog",
      "hitrace:hitrace_meter",
      "ipc:ipc_single",
      "ipc:ipc_core",
      "json:nlohmann_json_static",
      "samgr:samgr_common",
      "samgr:samgr_proxy",
    ]
  }

  part_name = "safwk"
  subsystem_name = "systemabilitymgr"
}

ohos_unittest("LocalAbilityManagerTest") {
  module_out_path = module_output_path
  resource_config_file =
      "//foundation/systemabilitymgr/safwk/test/resource/ohos_test.xml"

  include_dirs = [
    "//foundation/systemabilitymgr/safwk/services/safwk/include",
    "//foundation/systemabilitymgr/safwk/test/mock/common/audio_ability/include",
    "//foundation/systemabilitymgr/safwk/test/services/safwk/unittest/include",
  ]

  sources = [
    "./local_ability_manager_dumper_test.cpp",
    "./local_ability_manager_stub_test.cpp",
    "./local_ability_manager_test.cpp",
    "./mock_accesstoken_kit.cpp",
    "./mock_sa_realize.cpp",
    "./system_ability_ondemand_reason_test.cpp",
  ]

  configs =
      [ "//foundation/systemabilitymgr/safwk/test/resource:coverage_flags" ]

  deps = [
    ":system_ability_fwk_tdd",
    "//foundation/systemabilitymgr/safwk/test/mock/common/audio_ability:test_audio_ability",
    "//foundation/systemabilitymgr/safwk/test/mock/common/connect_ability:test_connect_ability",
    "//foundation/systemabilitymgr/safwk/test/mock/common/incomplete_ability:test_incomplete_ability",
    "//foundation/systemabilitymgr/safwk/test/mock/common/ondemand_ability:test_ondemand_ability",
    "//foundation/systemabilitymgr/safwk/test/mock/common/tt_ability:test_tt_ability",
    "//foundation/systemabilitymgr/safwk/test/services/safwk/unittest/listen_ability:listen_test",
    "//foundation/systemabilitymgr/safwk/test/services/safwk/unittest/test_svc_ability:svc_test",
  ]

  if (target_cpu == "arm") {
    cflags = [ "-DBINDER_IPC_32BIT" ]
  }

  external_deps = [
    "access_token:libaccesstoken_sdk",
    "c_utils:utils",
    "ffrt:libffrt",
    "googletest:gtest_main",
    "hilog:libhilog",
    "hisysevent:libhisysevent",
    "ipc:ipc_core",
    "json:nlohmann_json_static",
    "samgr:samgr_common",
    "samgr:samgr_proxy",
  ]
  defines = []
  if (safwk_support_access_token) {
    external_deps += [
      "access_token:libnativetoken",
      "access_token:libtoken_setproc",
    ]
    defines += [ "SUPPORT_ACCESS_TOKEN" ]
  }
}

ohos_unittest("MockLocalAbilityManagerTest") {
  module_out_path = module_output_path
  resource_config_file =
      "//foundation/systemabilitymgr/safwk/test/resource/ohos_test.xml"

  include_dirs = [
    "//foundation/systemabilitymgr/safwk/services/safwk/include",
    "//foundation/systemabilitymgr/safwk/test/services/safwk/unittest/include",
  ]

  sources = [ "./mock_local_ability_manager_test.cpp" ]

  configs =
      [ "//foundation/systemabilitymgr/safwk/test/resource:coverage_flags" ]

  deps = [ ":system_ability_fwk_tdd" ]

  if (target_cpu == "arm") {
    cflags = [ "-DBINDER_IPC_32BIT" ]
  }

  external_deps = [
    "access_token:libaccesstoken_sdk",
    "c_utils:utils",
    "ffrt:libffrt",
    "googletest:gtest_main",
    "hilog:libhilog",
    "hisysevent:libhisysevent",
    "ipc:ipc_core",
    "json:nlohmann_json_static",
    "samgr:samgr_common",
    "samgr:samgr_proxy",
  ]
  defines = []
  if (safwk_support_access_token) {
    external_deps += [
      "access_token:libnativetoken",
      "access_token:libtoken_setproc",
    ]
    defines += [ "SUPPORT_ACCESS_TOKEN" ]
  }
}

ohos_unittest("SystemAbilityTest") {
  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
    cfi_no_nvcall = true
    blocklist = "../../../../cfi_blocklist.txt"
  }
  module_out_path = module_output_path

  resource_config_file =
      "//foundation/systemabilitymgr/safwk/test/resource/ohos_test.xml"

  include_dirs = [
    "//foundation/systemabilitymgr/safwk/services/safwk/include",
    "//foundation/systemabilitymgr/safwk/test/services/safwk/unittest/include",
    "//foundation/systemabilitymgr/safwk/test/services/safwk/unittest/listen_ability/include",
  ]

  sources = [
    "./mock_sa_realize.cpp",
    "./sa_mock_permission.cpp",
    "./system_ability_test.cpp",
  ]

  configs =
      [ "//foundation/systemabilitymgr/safwk/test/resource:coverage_flags" ]

  deps = [ ":system_ability_fwk_tdd" ]

  if (target_cpu == "arm") {
    cflags = [ "-DBINDER_IPC_32BIT" ]
  }

  external_deps = [
    "access_token:libaccesstoken_sdk",
    "c_utils:utils",
    "googletest:gtest_main",
    "hilog:libhilog",
    "ipc:ipc_single",
    "json:nlohmann_json_static",
    "samgr:samgr_common",
  ]
  defines = []
  if (safwk_support_access_token) {
    external_deps += [
      "access_token:libnativetoken_shared",
      "access_token:libtokensetproc_shared",
    ]
    defines += [ "SUPPORT_ACCESS_TOKEN" ]
  }
}

ohos_unittest("CacheManagerTest") {
  module_out_path = module_output_path

  resource_config_file =
      "//foundation/systemabilitymgr/safwk/test/resource/ohos_test.xml"

  include_dirs = [
    "//foundation/systemabilitymgr/safwk/services/safwk/include",
    "//foundation/systemabilitymgr/safwk/test/services/safwk/unittest/include",
    "//foundation/systemabilitymgr/safwk/test/services/safwk/unittest/listen_ability/include",
    "//foundation/systemabilitymgr/safwk/test/mock/common/audio_ability/include",
  ]

  sources = [ "./api_cache_manager_test.cpp" ]

  configs =
      [ "//foundation/systemabilitymgr/safwk/test/resource:coverage_flags" ]

  deps = [
    ":system_ability_fwk_tdd",
    "listen_ability:listen_test",
    "test_sa_proxy_cache_ability:test_sa_proxy_cache",
    "//foundation/systemabilitymgr/safwk/test/mock/common/audio_ability:test_audio_ability",
  ]

  if (target_cpu == "arm") {
    cflags = [ "-DBINDER_IPC_32BIT" ]
  }

  external_deps = [
    "access_token:libaccesstoken_sdk",
    "c_utils:utils",
    "googletest:gtest_main",
    "hilog:libhilog",
    "ipc:ipc_single",
    "samgr:samgr_common",
  ]
  defines = []
  if (safwk_support_access_token) {
    external_deps += [
      "access_token:libnativetoken_shared",
      "access_token:libtoken_setproc",
    ]
    defines += [ "SUPPORT_ACCESS_TOKEN" ]
  }
}

ohos_unittest("ExpireLruCacheTest") {
  module_out_path = module_output_path

  resource_config_file =
      "//foundation/systemabilitymgr/safwk/test/resource/ohos_test.xml"

  include_dirs = [
    "//foundation/systemabilitymgr/safwk/services/safwk/include",
    "//foundation/systemabilitymgr/safwk/test/services/safwk/unittest/include",
  ]

  sources = [ "./expire_lru_cache_test.cpp" ]

  configs =
      [ "//foundation/systemabilitymgr/safwk/test/resource:coverage_flags" ]

  deps = [
    ":system_ability_fwk_tdd",
    "listen_ability:listen_test",
  ]

  if (target_cpu == "arm") {
    cflags = [ "-DBINDER_IPC_32BIT" ]
  }

  external_deps = [
    "c_utils:utils",
    "googletest:gtest_main",
    "hilog:libhilog",
    "ipc:ipc_single",
  ]
}

ohos_unittest("SaProxyCacheTest") {
  module_out_path = module_output_path

  resource_config_file =
      "//foundation/systemabilitymgr/safwk/test/resource/ohos_test.xml"

  include_dirs = [
    "//foundation/systemabilitymgr/safwk/services/safwk/include",
    "//foundation/systemabilitymgr/safwk/test/services/safwk/unittest/include",
    "//foundation/systemabilitymgr/safwk/test/services/safwk/unittest/test_sa_proxy_cache_ability/include",
    "//foundation/systemabilitymgr/safwk/test/services/safwk/unittest/listen_ability/include",
  ]

  sources = [ "./sa_proxy_cache_test.cpp" ]

  configs =
      [ "//foundation/systemabilitymgr/safwk/test/resource:coverage_flags" ]

  deps = [
    ":system_ability_fwk_tdd",
    "listen_ability:listen_test",
    "test_sa_proxy_cache_ability:test_sa_proxy_cache",
  ]

  if (target_cpu == "arm") {
    cflags = [ "-DBINDER_IPC_32BIT" ]
  }

  external_deps = [
    "c_utils:utils",
    "googletest:gmock_main",
    "googletest:gtest_main",
    "hilog:libhilog",
    "ipc:ipc_single",
  ]
}

ohos_unittest("SystemAbilityStartTest") {
  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
    cfi_no_nvcall = true
    blocklist = "../../../../cfi_blocklist.txt"
  }
  module_out_path = module_output_path
 
  resource_config_file =
      "//foundation/systemabilitymgr/safwk/test/resource/ohos_test.xml"
 
  include_dirs = [
    "//foundation/systemabilitymgr/safwk/services/safwk/include",
    "//foundation/systemabilitymgr/safwk/test/services/safwk/unittest/include",
    "//foundation/systemabilitymgr/safwk/test/services/safwk/unittest/listen_ability/include",
  ]
 
  sources = [
    "./system_ability_start_test.cpp",
    "//foundation/systemabilitymgr/safwk/services/safwk/src/system_ability_start.cpp",
  ]
 
  configs =
      [ "//foundation/systemabilitymgr/safwk/test/resource:coverage_flags" ]
 
  deps = [ ":system_ability_fwk_tdd" ]
 
  if (target_cpu == "arm") {
    cflags = [ "-DBINDER_IPC_32BIT" ]
  }
 
  external_deps = [
    "access_token:libaccesstoken_sdk",
    "c_utils:utils",
    "googletest:gtest_main",
    "hilog:libhilog",
    "ipc:ipc_single",
    "json:nlohmann_json_static",
    "samgr:samgr_common",
  ]
  defines = []
  if (safwk_support_access_token) {
    external_deps += [
      "access_token:libnativetoken_shared",
      "access_token:libtokensetproc_shared",
    ]
    defines += [ "SUPPORT_ACCESS_TOKEN" ]
  }
  if (is_standard_system) {
    external_deps += [
      "init:libbegetutil"
    ]
  }
}
 
group("unittest") {
  testonly = true
  deps = [
    ":CacheManagerTest",
    ":ExpireLruCacheTest",
    ":LocalAbilityManagerTest",
    ":MockLocalAbilityManagerTest",
    ":SystemAbilityTest",
    ":SystemAbilityStartTest",
  ]
}
