# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")

config("listen_ability_config") {
  visibility = [ ":*" ]
  include_dirs = [
    "include",
    "//utils/system/safwk/native/include",
  ]
}

ohos_shared_library("listen_test") {
  sources = [
    "src/listen_ability.cpp",
    "src/listen_ability_proxy.cpp",
    "src/listen_ability_stub.cpp",
  ]

  configs = [ ":listen_ability_config" ]

  deps = [
    "//foundation/distributedschedule/safwk/interfaces/innerkits/safwk:system_ability_fwk",
    "//utils/native/base:utils",
  ]

  if (is_standard_system) {
    external_deps = [ "hiviewdfx_hilog_native:libhilog" ]
  } else {
    external_deps = [ "hilog:libhilog" ]
  }

  external_deps += [
    "ipc:ipc_core",
    "utils_base:utils",
  ]
  part_name = "safwk"
  subsystem_name = "distributedschedule"
}
