# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//build/test.gni")
import("//foundation/ability/idl_tool/idl_config.gni")

config("listen_ability_config") {
  visibility = [ ":*" ]
  include_dirs = [
    "include",
    "${target_gen_dir}",
  ]
  include_dirs += [ "//foundation/systemabilitymgr/safwk/test/services/safwk/unittest/test_sa_proxy_cache_ability/include" ]
}

idl_gen_interface("listen_ability_interface") {
  sources = [ "IListenAbility.idl" ]
  sequenceable_pub_deps = [ "//foundation/systemabilitymgr/safwk/interfaces/innerkits/safwk:api_cache_manager" ]
  part_name = "safwk"
  subsystem_name = "systemabilitymgr"
}

ohos_shared_library("listen_test") {
  configs = [
    ":listen_ability_config",
    "//foundation/systemabilitymgr/safwk/test/resource:coverage_flags",
  ]
  sources = [ "src/listen_ability.cpp" ]

  deps = [
    ":liblisten_ability_interface_proxy",
    ":liblisten_ability_interface_stub",
    "//foundation/systemabilitymgr/safwk/interfaces/innerkits/safwk:api_cache_manager",
    "//foundation/systemabilitymgr/safwk/interfaces/innerkits/safwk:system_ability_fwk",
    "//foundation/systemabilitymgr/safwk/test/services/safwk/unittest/test_sa_proxy_cache_ability:test_sa_proxy_cache",
  ]

  external_deps = [ "hilog:libhilog" ]

  external_deps += [
    "c_utils:utils",
    "ipc:ipc_core",
    "samgr:samgr_proxy",
  ]
  part_name = "safwk"
  subsystem_name = "systemabilitymgr"
}
