# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")

ohos_rust_shared_library("sa_test") {
  sources = [ "./src/lib.rs" ]

  deps = [
    "../../../../../../../../base/hiviewdfx/hilog/interfaces/rust:hilog_rust",
    "../../../../../../../communication/ipc/interfaces/innerkits/rust:ipc_rust",
    "../../../../../interfaces/innerkits/safwk:system_ability_fwk_rust",
  ]

  crate_name = "sa_test"
  crate_type = "dylib"

  subsystem_name = "systemabilitymgr"
  part_name = "safwk"
}

ohos_rust_shared_library("rust_service_test") {
  sources = [ "./rust_sa_test/main.rs" ]
  deps = [
    ":sa_test",
    "../../../../../../../../base/hiviewdfx/hilog/interfaces/rust:hilog_rust",
    "../../../../../../../communication/ipc/interfaces/innerkits/rust:ipc_rust",
    "../../../../../interfaces/innerkits/safwk:system_ability_fwk_rust",
  ]

  crate_name = "rust_service_test"
  crate_type = "dylib"
  subsystem_name = "systemabilitymgr"
  part_name = "safwk"
}
