# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")

ohos_rust_shared_library("audio_rust_ipc") {
  sources = [ "./audio_rust_sa/lib.rs" ]

  deps = [ "../../../../../interfaces/innerkits/safwk:system_ability_fwk_rust" ]
  external_deps = [
    "hilog:hilog_rust",
    "ipc:ipc_rust",
  ]

  crate_name = "audio_rust_ipc"
  crate_type = "dylib"

  subsystem_name = "systemabilitymgr"
  part_name = "safwk"
}

ohos_rust_shared_library("audio_rust_sa") {
  sources = [ "./audio_rust_sa/audio.rs" ]
  deps = [
    ":audio_rust_ipc",
    "../../../../../interfaces/innerkits/safwk:system_ability_fwk_rust",
  ]
  external_deps = [
    "hilog:hilog_rust",
    "ipc:ipc_rust",
    "samgr:rust_samgr",
  ]

  crate_name = "audio_rust_sa"
  crate_type = "dylib"
  subsystem_name = "systemabilitymgr"
  part_name = "safwk"
}

ohos_rust_shared_library("listen_rust_ipc") {
  sources = [ "./listen_rust_sa/lib.rs" ]

  deps = [ "../../../../../interfaces/innerkits/safwk:system_ability_fwk_rust" ]
  external_deps = [
    "hilog:hilog_rust",
    "ipc:ipc_rust",
  ]

  crate_name = "listen_rust_ipc"
  crate_type = "dylib"

  subsystem_name = "systemabilitymgr"
  part_name = "safwk"
}

ohos_rust_shared_library("listen_rust_sa") {
  sources = [ "./listen_rust_sa/listen.rs" ]
  deps = [
    ":audio_rust_ipc",
    ":listen_rust_ipc",
    "../../../../../interfaces/innerkits/safwk:system_ability_fwk_rust",
  ]
  external_deps = [
    "hilog:hilog_rust",
    "ipc:ipc_rust",
    "samgr:rust_samgr",
  ]

  crate_name = "listen_rust_sa"
  crate_type = "dylib"
  subsystem_name = "systemabilitymgr"
  part_name = "safwk"
}
