# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")

config("test_svc_ability_config") {
  visibility = [ ":*" ]
  include_dirs = [
    "include",
    "../test_sa_proxy_cache_ability/include",
  ]
}

ohos_shared_library("svc_test") {
  sources = [ "src/test_svc_ability.cpp" ]

  configs = [
    "../../../../resource:coverage_flags",
    ":test_svc_ability_config",
  ]

  deps = [
    "../../../../../interfaces/innerkits/safwk:api_cache_manager",
    "../../../../../interfaces/innerkits/safwk:system_ability_fwk",
    "../test_sa_proxy_cache_ability:test_sa_proxy_cache",
  ]

  external_deps = [ "hilog:libhilog" ]

  external_deps += [
    "c_utils:utils",
    "ipc:ipc_single",
    "samgr:samgr_proxy",
  ]
  part_name = "safwk"
  subsystem_name = "systemabilitymgr"
}
